cambio de rutas

--- a/pages/tateti/index.html
+++ b/pages/tateti/index.html
@@ -184,9 +184,9 @@
   </head>
   <body>
     <app-root></app-root>
-    <script src="runtime.7af799e5816ceab5.js" type="module"></script>
-    <script src="polyfills.0bf0c467e10c6a30.js" type="module"></script>
-    <script src="scripts.a9a9afec3f9af0e3.js" defer></script>
-    <script src="main.ffa3d8e169fadaaf.js" type="module"></script>
+    <script src="./runtime.7af799e5816ceab5.js" type="module"></script>
+    <script src="./polyfills.0bf0c467e10c6a30.js" type="module"></script>
+    <script src="./scripts.a9a9afec3f9af0e3.js" defer></script>
+    <script src="./main.ffa3d8e169fadaaf.js" type="module"></script>
   </body>
 </html>
