--- a/pages/simon/index.html
+++ b/pages/simon/index.html
@@ -183,9 +183,9 @@
   </head>
   <body>
     <app-root></app-root>
-    <script src="runtime.ca656eb7dda44ae1.js" type="module"></script>
-    <script src="polyfills.6a815ad59d7d2b07.js" type="module"></script>
-    <script src="scripts.a9a9afec3f9af0e3.js" defer></script>
-    <script src="main.b1f904664566a5d3.js" type="module"></script>
+    <script src="./runtime.ca656eb7dda44ae1.js" type="module"></script>
+    <script src="./polyfills.6a815ad59d7d2b07.js" type="module"></script>
+    <script src="./scripts.a9a9afec3f9af0e3.js" defer></script>
+    <script src="./main.b1f904664566a5d3.js" type="module"></script>
   </body>
 </html>
