--- a/pages/simon/index.html
+++ b/pages/simon/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Simon</title>
-    <base href="/" />
+    <base href="/pages/simon" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="Permissions-Policy" content="interest-cohort=()" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
