cambios en la base url

--- a/pages/simon/index.html
+++ b/pages/simon/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Simon</title>
-    <base href="/pages/simon" />
+    <base href="/pages/simon/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="Permissions-Policy" content="interest-cohort=()" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
@@ -183,9 +183,9 @@
   </head>
   <body>
     <app-root></app-root>
-    <script src="./runtime.ca656eb7dda44ae1.js" type="module"></script>
-    <script src="./polyfills.6a815ad59d7d2b07.js" type="module"></script>
-    <script src="./scripts.a9a9afec3f9af0e3.js" defer></script>
-    <script src="./main.b1f904664566a5d3.js" type="module"></script>
+    <script src="pages/simon/runtime.ca656eb7dda44ae1.js" type="module"></script>
+    <script src="pages/simon/polyfills.6a815ad59d7d2b07.js" type="module"></script>
+    <script src="pages/simon/scripts.a9a9afec3f9af0e3.js" defer></script>
+    <script src="pages/simon/main.b1f904664566a5d3.js" type="module"></script>
   </body>
 </html>
