--- a/pages/tateti/index.html
+++ b/pages/tateti/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Tateti</title>
-    <base href="/pages/tateti" />
+    <base href="/pages/tateti/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="Permissions-Policy" content="interest-cohort=()" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
@@ -184,9 +184,9 @@
   </head>
   <body>
     <app-root></app-root>
-    <script src="./tateti/runtime.7af799e5816ceab5.js" type="module"></script>
-    <script src="./polyfills.0bf0c467e10c6a30.js" type="module"></script>
-    <script src="./scripts.a9a9afec3f9af0e3.js" defer></script>
-    <script src="./main.ffa3d8e169fadaaf.js" type="module"></script>
+    <script src="pages/tateti/runtime.7af799e5816ceab5.js" type="module"></script>
+    <script src="pages/tateti/polyfills.0bf0c467e10c6a30.js" type="module"></script>
+    <script src="pages/tateti/scripts.a9a9afec3f9af0e3.js" defer></script>
+    <script src="pages/tateti/main.ffa3d8e169fadaaf.js" type="module"></script>
   </body>
 </html>
